tests/error/modifier_errors/flag_power_qubit2.err
Error: Power constraint violation (at $FILE:13:9)
   | 
11 | @guppy(power=True)
12 | def test() -> None:
13 |     qp = init_qubits()
   |          ^^^^^^^^^^^^^ This function cannot be called in a power context

Note: The function allocates qubits, which is not allowed in a power context

Guppy compilation failed due to 1 previous error
